2007-07-06 Braden McDaniel  <braden@endoframe.com>

	Define JS_THREADSAFE when compiling against newer libmozjs.  This
	is required when building against the libmozjs included with
	Firefox 2.0.

	* configure.ac: The pkg-config metadata file for libmozjs doesn't
	include -DJS_THREADSAFE in Cflags.  Inspect mozilla-config.h to
	see if JS_THREADSAFE is defined there; and if so, add
	-DJS_THREADSAFE to JS_CFLAGS.
	* src/libopenvrml/openvrml/script.cpp
	(js_::script::activate(double, const std::string &, size_t, const
	openvrml::field_value *[])): When compiling with JS_THREADSAFE,
	call JS_SetContextThread on entering this function and
	JS_ClearContextThread on leaving it.

2007-07-09 Braden McDaniel  <braden@endoframe.com>

	* README: Added documentation for --with-libjs.

2007-07-09 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes.

	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/node.cpp

2007-07-01 Braden McDaniel  <braden@endoframe.com>

	* lib/antlr/GNUmakefile.am (EXTRA_DIST): Updates for ANTLR 2.7.7.

2007-07-01 Braden McDaniel  <braden@endoframe.com>

	* openvrml.pc.in: Added BOOST_LIB_SUFFIX to -lboost_thread.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fixed comparison of with_libjs shell variable.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp: Check to see whether
	HAVE_WINDOWS_H and HAVE_APPLE_OPENGL_FRAMEWORK are defined.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(trackball(float, float, float, float)): Initialize rotation.

2007-06-30 Braden McDaniel  <braden@endoframe.com>

	Expose common attributes of lighting nodes via
	openvrml::light_node.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::light_node::ambient_intensity() const): Added function.
	(openvrml::light_node::intensity() const): Added function.
	(openvrml::light_node::on() const): Added function.